# slop-reveal

./: .gitignore  CLAUDE.md  CMakeLists.txt  CONTRIBUTING.md  README.md  slopreveal.toml  vcpkg.json
.github/workflows/: build-linux.yml  build-macos.yml  build-windows.yml
config_examples/: claude.toml  gemini.toml  ollama.toml  openai.toml
docs/: install-ollama.md
examples/: README.md  hello_calc.c
include/cache/: cache.h
include/config/: config.h
include/disasm/: disassembler.h
include/http/: http_client.h
include/output/: output.h
include/providers/: claude_provider.h  gemini_provider.h  ollama_provider.h  openai_provider.h  provider.h
src/: main.cpp
src/cache/: cache.cpp
src/config/: config.cpp
src/disasm/: disassembler.cpp
src/http/: http_client.cpp
src/output/: output.cpp
src/providers/: claude_provider.cpp  gemini_provider.cpp  ollama_provider.cpp  openai_provider.cpp  provider.cpp
